[project]
name = "glucose-neuralforecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "neuralforecast>=3.1.2",
    "polars>=1.34.0",
    "pycomfort>=0.0.18",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
